Added the start scripts for server and client

--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "whatwg-fetch": "2.0.3"
   },
   "scripts": {
-    "start": "node scripts/start.js",
+    "start": "NODE_ENV=development npx babel-node --presets zero server/index.js",
+    "start-dev": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom"
   },
