--- a/package.json
+++ b/package.json
@@ -3,6 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "dotenv": "^4.0.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-prettier": "^2.6.0",
+    "node-sass": "^4.8.3",
+    "prettier": "^1.12.1",
+    "sass-loader": "^7.0.1",
     "autoprefixer": "7.1.6",
     "babel-core": "6.26.0",
     "babel-eslint": "7.2.3",
@@ -45,7 +53,7 @@
     "whatwg-fetch": "2.0.3"
   },
   "scripts": {
-    "start": "NODE_ENV=development npx babel-node --presets zero server/index.js",
+    "start": "NODE_ENV=development npx babel-node --presets env server/index.js",
     "start-dev": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js --env=jsdom"
@@ -126,14 +134,5 @@
     "semi": false,
     "printWidth": 120
   },
-  "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-zero": "^0.2.0",
-    "dotenv": "^4.0.0",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-prettier": "^2.6.0",
-    "node-sass": "^4.8.3",
-    "prettier": "^1.12.1",
-    "sass-loader": "^7.0.1"
-  }
+  "devDependencies": {}
 }
